Removing flight modes for now

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
       <block type="photo_interval"></block>
       <block type="video"></block>
     </category>
-    <category name="Flight Modes">
+    <!--<category name="Flight Modes">
       <block type="orbit"></block>
       <block type="follow"></block>
-    </category>
+    </category>-->
     <category name="Land">
       <block type="land"></block>
       <block type="land_home"></block>
