--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   <script src="./blockly/blocks/droneblocks/orbit.js"></script>
   <script src="./blockly/blocks/droneblocks/loop.js"></script>
   <script src="./blockly/blocks/droneblocks/follow.js"></script>
-  <script src="./blockly/blocks/droneblocks/test.js"></script>
   <style>
     html, body {
       height: 100%;
@@ -55,7 +54,7 @@
       </td>
     </tr>
     <tr><td><textarea style="width: 300px; height: 50px;" id="textarea"></textarea></td></tr>
-    <tr><td style="text-align:right"><a href="#" onclick="uploadMission();">Upload Mission</a></td></tr>
+    <tr><td style="text-align:right"><a href="#" onclick="uploadMission();">Start Mission</a></td></tr>
   </table>
 
   <div id="blocklyDiv" style="position: absolute"></div>
