--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <category name="Camera">
       <block type="pitch_gimbal_to"></block>
       <block type="photo"></block>
-      <block type="photo_interval"></block>
+      <!--<block type="photo_interval"></block>-->
       <block type="video"></block>
     </category>
     <!--<category name="Flight Modes">
