Some basic UI work. Colors are not exactly what I wanted given I had to use HSV instead of hex

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       height: 99%;
     }
   </style>
+  <link rel="stylesheet" type="text/css" href="droneblocks.css">
 </head>
 <body>
   <table>
