--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       if(os == 'iOS') {
         document.location.href='ios:' + Blockly.JavaScript.workspaceToCode(workspace);
       } else if(os == 'Android') {
-      	Android.parseMission(Blockly.JavaScript.workspaceToCode(workspace));
+      	Android.confirmMission(Blockly.JavaScript.workspaceToCode(workspace));
       }
     }
     
