Moving help link to in-app

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <script src="./blockly/msg/js/en.js"></script>
   <script src="./blockly/blocks/droneblocks/takeoff.js"></script>
   <script src="./blockly/blocks/droneblocks/flight_path.js"></script>
-  <script src="./blockly/blocks/droneblocks/heading_mode.js"></script>
   <script src="./blockly/blocks/droneblocks/land.js"></script>
   <script src="./blockly/blocks/droneblocks/land_home.js"></script>
   <script src="./blockly/blocks/droneblocks/hover.js"></script>
@@ -45,7 +44,7 @@
     <category name="Takeoff">
       <block type="takeoff"></block>
       <block type="flight_path"></block>
-      <block type="heading_mode"></block>
+      <!--<block type="heading_mode"></block>-->
     </category>
     <category name="Navigation">
       <block type="fly_forward">
