--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </td>
     </tr>
     <!--<tr><td><textarea style="width: 300px; height: 150px;" id="textarea"></textarea></td></tr>-->
-    <tr><td style="text-align:right"><a href="#" id="startButton" onclick="uploadMission();">Start Mission</a></td></tr>
+    <tr><td style="text-align:right"><a href="#" id="startButton" onclick="uploadMission();">Preview Mission</a></td></tr>
   </table>
 
   <div id="blocklyDiv" style="position: absolute"></div>
