--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
   <link rel="stylesheet" type="text/css" href="droneblocks.css">
 </head>
 <body>
-  <table>
-    <tr>
-      <td id="blocklyArea">
-      </td>
-    </tr>
-    <!--<tr><td><textarea style="width: 300px; height: 150px;" id="textarea"></textarea></td></tr>-->
-    <tr><td style="text-align:right"><a href="#" id="startButton" onclick="uploadMission();">Preview Mission</a></td></tr>
-  </table>
+  <div id="blocklyArea"></div>
+  <div id="codeView">var test;</div>
+  
+  <div id="buttons">&nbsp;
+    <div id="codeViewButton"><a href="#" onclick="showCode();">Code View</a></div>
+    <div id="previewButton"><a href="#" onclick="uploadMission();">Preview Mission</a></div>
+  </div>
 
   <div id="blocklyDiv" style="position: absolute"></div>
 
