--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width; initial-scale=1.25; maximum-scale=1.25; user-scalable=0;" />
   <title>DroneBlocks</title>
+  <script src="./jquery-2.2.3.min.js"></script>
   <script src="./blockly/blockly_compressed.js"></script>
   <script src="./blockly/blocks_compressed.js"></script>
   <script src="./blockly/javascript_compressed.js"></script>
@@ -33,13 +34,16 @@
   <link rel="stylesheet" type="text/css" href="blockly/prettify.css">
 </head>
 <body>
+  
+  <div id="codeViewButton"><a href="#" onclick="showCodeView();">{ Code }</a></div>
+  
   <div id="blocklyArea"></div>
+  
   <div id="codeView">
     <pre id="code" class="prettyprint linenums"></pre>
   </div>
   
-  <div id="buttons">&nbsp;
-    <div id="codeViewButton"><a href="#" onclick="showCodeView();">Code View</a></div>
+  <div id="buttons">
     <div id="previewButton"><a href="#" onclick="uploadMission();">Preview Mission</a></div>
   </div>
 
