Some refactoring while we test being able to automatically close code view when mission is launched

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   
-  <div id="codeViewButton"><a href="#" onclick="showCodeView();">{ Code }</a></div>
+  <div id="codeViewButton"><a href="#" onclick="toggleCodeView();">{ Code }</a></div>
   
   <div id="blocklyArea"></div>
   
