Removing flight path for the time being. This requires being able to set waypoins in a non-linear fashion

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <xml id="toolbox" style="display: none">
     <category name="Takeoff">
       <block type="takeoff"></block>
-      <block type="flight_path"></block>
+      <!--<block type="flight_path"></block>-->
       <!--<block type="heading_mode"></block>-->
     </category>
     <category name="Navigation">
