--- a/materialize/test.html
+++ b/materialize/test.html
@@ -12,11 +12,6 @@
 
     <body>
       <nav class="light-blue lighten-1" role="navigation">
-        
-          <div class="nav-wrapper container">
-            <ul class="right hide-on-med-and-down">
-              <li><a href="#">Actions</a></li>
-            </ul>
 
             <ul id="nav-mobile" class="side-nav">
               <li><a href="#">Preview Mission</a></li>
@@ -29,7 +24,7 @@
               <li class="divider"></li>
               <li><a href="#">View All</a></li>
             </ul>
-            <a href="#" data-activates="nav-mobile" class="right button-collapse"><i class="material-icons">menu</i></a>
+            <a href="#" data-activates="nav-mobile" class="right button-collapse show-on-large"><i class="material-icons">menu</i></a>
           </div>
         </nav>
         
