--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     <li class="divider"></li>
     <li><a href="#" id="shareMission">Share Mission</a></li>
     <li class="divider"></li>
-    <li><a href="#">Mission Dashboard</a></li>
+    <li><a href="dashboard.html">Mission Dashboard</a></li>
     <li class="divider"></li>
-    <li class="center-align"><span class="waves-effect waves-light btn z-depth-0 light-blue">Logout</span></li>
+    <li class="center-align" id="logout"><span class="waves-effect waves-light btn z-depth-0 light-blue">Logout</span></li>
   </ul>
   
   <a href="#" data-activates="nav-mobile" class="right button-collapse show-on-large" id="hamburger"><i class="small material-icons">menu</i></a>
