--- a/missions.html
+++ b/missions.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width; initial-scale=1.25; maximum-scale=1.25; user-scalable=0;" />
   <title>DroneBlocks</title>
-  
+  <script src="./js/jquery-2.2.3.min.js"></script>
   <!-- Material -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="./materialize/css/materialize.min.css"  media="screen,projection"/>
@@ -15,15 +15,11 @@
 </head>
 <body>
   
-  <div class="collection with-header">
+  <div class="collection with-header" id="missionList">
     <div class="collection-header"><h5>My Missions</h5></div>
-    <a href="index.html?1" class="collection-item">Mission 1</a>
-    <a href="index.html?2" class="collection-item">Mission 2</a>
-    <a href="index.html?3" class="collection-item">Mission 3</a>
-    <a href="index.html?4" class="collection-item">Mission 4</a>
   </div>
   
   <script type="text/javascript" src="./materialize/js/materialize.min.js"></script>
-  <script type="text/javascript" src="./js/firebase.js"></script>
+  <script type="text/javascript" src="./js/missions.js"></script>
 </body>
 </html>
