--- a/missions.html
+++ b/missions.html
@@ -37,7 +37,7 @@
   <div id="deleteMissionModal" class="modal">
     
     <div class="modal-content">
-      <h6>Are you sure want to delete this DroneBlocks mission?</h6>
+      <h6>Are you sure you want to delete this DroneBlocks mission?</h6>
     </div>
     
     <div class="modal-footer">
