Adding button to get back to blocks

--- a/missions.html
+++ b/missions.html
@@ -21,7 +21,6 @@
 </head>
 <body>
   <h5 class="card-panel light-blue darken-1 white-text z-depth-0">My Missions</h5>
-  
   <table id="missionsTable">
     <thead>
       <tr>
@@ -33,6 +32,10 @@
     <tbody id="tbody">
     </tbody>
   </table>
+  
+  <div style="padding: 20px;">
+    <a class="waves-effect waves-light btn z-depth-0 light-blue" href="index.html">New Mission</a>
+  </div>
   
   <div id="deleteMissionModal" class="modal">
     
