Sharing work for iPad

--- a/missions.html
+++ b/missions.html
@@ -65,14 +65,14 @@
     <div class="modal-content">
       <p>Copy one of the links below to share this mission with a friend. You can share it with them on a desktop or on an iPad with DroneBlocks installed.</p>
       
-      <div class="row">
+      <div>
         <div class="input-field col s6">
           <strong>iPad Share Link</strong>
           <input disabled id="iPadShareLink" type="text" class="validate">
         </div>
       </div>
       
-      <div class="row">
+      <div>
         <div class="input-field col s6">
           <strong>Desktop Share Link</strong>
           <input disabled id="desktopShareLink" type="text" class="validate">
