--- a/missions.html
+++ b/missions.html
@@ -68,14 +68,14 @@
       <div>
         <div class="input-field col s6">
           <strong>iPad Share Link</strong>
-          <input disabled id="iPadShareLink" type="text" class="validate">
+          <input id="iPadShareLink" type="text" class="validate">
         </div>
       </div>
       
       <div>
         <div class="input-field col s6">
           <strong>Desktop Share Link</strong>
-          <input disabled id="desktopShareLink" type="text" class="validate">
+          <input id="desktopShareLink" type="text" class="validate">
         </div>
       </div>
     </div>
