Hiding share mission button on block screen for now

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <li><a href="#" id="showCode">Show Mission Code</a></li>
     <li class="divider"></li>
     <li><a href="#" id="saveMission">Save Mission</a></li>
-    <li class="divider" id="d1"></li>
-    <li><a href="#" id="shareMission">Share Mission</a></li>
+    <!--<li class="divider" id="d1"></li>
+    <li><a href="#" id="shareMission">Share Mission</a></li>-->
     <li class="divider" id="d2"></li>
     <li><a href="missions.html" id="myMissions">My Missions</a></li>
     <li class="divider" id="d3"></li>
