Getting caching back in order for release

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--<html manifest="droneblocks.appcache">-->
+<html manifest="droneblocks.appcache">
 <html>
 <head>
   <meta charset="utf-8">
@@ -30,8 +30,8 @@
   <script src="./blockly/blocks/droneblocks/orbit.js"></script>
   <script src="./blockly/blocks/droneblocks/loop.js"></script>
   <script src="./blockly/blocks/droneblocks/follow.js"></script>
-  <link rel="stylesheet" type="text/css" href="droneblocks.css">
-  <link rel="stylesheet" type="text/css" href="blockly/prettify.css">
+  <link rel="stylesheet" type="text/css" href="./droneblocks.css">
+  <link rel="stylesheet" type="text/css" href="./blockly/prettify.css">
   
   <!-- Material -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
