Making hamburger bigger

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </ul>
   
   <!-- Hamburger icon -->
-  <a href="#" data-activates="nav-mobile" class="right button-collapse show-on-large" id="hamburger"><i class="small material-icons">menu</i></a>
+  <a href="#" data-activates="nav-mobile" class="right button-collapse show-on-large" id="hamburger"><i class="medium material-icons">menu</i></a>
   
   <div id="missionTitle">Untitled Mission</div>
   
