Adding ability to pitch gimbal above horizon. Still needs testing on aircraft.

--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
       </block>
     </category>
     <category name="Camera">
-      <block type="pitch_gimbal_to"></block>
+      <block type="pitch_gimbal_to">
+        <field name="angle">0</field>
+      </block>
       <block type="photo"></block>
       <!--<block type="photo_interval"></block>-->
       <block type="video"></block>
