Changing gimbal block to accept values between 0 and -90

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width; initial-scale=1.25; maximum-scale=1.25; user-scalable=0;" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.25, maximum-scale=1.25, user-scalable=0" />
   <title>DroneBlocks</title>
   <script src="./js/jquery-2.2.3.min.js"></script>
   <script src="./blockly/blockly_compressed.js"></script>
@@ -146,7 +146,7 @@
       </block>
     </category>
     <category name="Camera">
-      <block type="pitch_gimbal_to">
+      <block type="pitch_gimbal">
         <field name="angle">0</field>
       </block>
       <block type="photo"></block>
