Renaming pitch gimbal block to original format so we don't break compat with existing missions

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </block>
     </category>
     <category name="Camera">
-      <block type="pitch_gimbal">
+      <block type="pitch_gimbal_to">
         <field name="angle">0</field>
       </block>
       <block type="photo"></block>
