--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html manifest="droneblocks.appcache">
+<html manifest="">
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.25, maximum-scale=1.25, user-scalable=0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <title>DroneBlocks</title>
   <script src="./js/jquery-2.2.3.min.js"></script>
   <script src="./blockly/blockly_compressed.js"></script>
