Logic block and prelim map preview work

--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
     
   </div>
   
+  <!-- Map preview modal -->
+  <div id="mapPreviewModal" class="modal" style="width: 90% !important; height: 90% !important">
+    
+  </div>
+  
   <div id="blocklyArea"></div>
   
   <!-- Code preview -->
@@ -166,6 +171,11 @@
       <block type="orbit"></block>
       <block type="follow"></block>
     </category>-->
+    <category name="Logic">
+      <block type="controls_if"></block>
+      <block type="logic_compare"></block>
+      <block type="logic_operation"></block>
+    </category>
     <category name="Math">
       <block type="math_number">
         <field name="NUM">10</field>
