Adding is even/odd block

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
         <field name="NUM">10</field>
       </block>
       <block type="math_arithmetic"></block>
+      <block type="math_number_property"></block>
     </category>
     <category name="Variables" custom="VARIABLE">
     </category>
