Changing button to back button

--- a/missions.html
+++ b/missions.html
@@ -17,7 +17,7 @@
   <link type="text/css" rel="stylesheet" href="./materialize/css/materialize.min.css"  media="screen,projection"/>
   
   <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.7.2/firebase.js"></script>
   <script>
     // Initialize Firebase
     var config = {
@@ -44,7 +44,7 @@
   </table>
   
   <div style="padding: 20px;">
-    <a class="waves-effect waves-light btn z-depth-0 light-blue" href="index.html">New Mission</a>
+    <a class="waves-effect waves-light btn z-depth-0 light-blue" href="index.html">Back</a>
   </div>
   
   <div id="deleteMissionModal" class="modal">
