Getting blocks back in. Somehow they got lost in the mix.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <script src="./blockly/blocks/droneblocks/fly_forward.js"></script>
   <script src="./blockly/blocks/droneblocks/change_altitude.js"></script>
   <script src="./blockly/blocks/droneblocks/video.js"></script>
+  <script src="./blockly/blocks/droneblocks/video_duration.js"></script>
   <script src="./blockly/blocks/droneblocks/orbit.js"></script>
   <script src="./blockly/blocks/droneblocks/loop.js"></script>
   <script src="./blockly/blocks/droneblocks/follow.js"></script>
@@ -154,8 +155,9 @@
         <field name="angle">0</field>
       </block>
       <block type="photo"></block>
-      <!--<block type="photo_interval"></block>-->
+      <block type="photo_interval"></block>
       <block type="video"></block>
+      <block type="video_duration"></block>
     </category>
     <category name="Loops">
       <block type="loop">
