--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
       databaseURL: "https://fiery-inferno-4972.firebaseio.com",
       storageBucket: "",
     };
+    /*var config = {
+      apiKey: "AIzaSyAGgqla_TWV4wVgaQ87HG3VDT0igLA8KhU",
+      authDomain: "droneblocks-staging.firebaseapp.com",
+      databaseURL: "https://droneblocks-staging.firebaseio.com",
+      projectId: "droneblocks-staging",
+      storageBucket: "droneblocks-staging.appspot.com",
+    };*/
     firebase.initializeApp(config);
   </script>
 </head>
