Forgot to rename loop block back to old name

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <block type="video_duration"></block>
     </category>
     <category name="Loops">
-      <block type="loop_with_variable">
+      <block type="loop">
         <value name="TIMES">
           <block type="math_number">
             <field name="NUM">3</field>
