Partially resolves #12 don't allow empty mission names

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </div>
     
     <div class="modal-footer">
-      <a href="#!" class=" modal-action modal-close waves-effect waves-light btn z-depth-0" id="saveModal">Save</a>
+      <a href="#!" class=" modal-action waves-effect waves-light btn z-depth-0" id="saveModal">Save</a>
       <a href="#!" class=" modal-action modal-close waves-effect waves-light btn-flat">Cancel</a>
     </div>
     
